# rtiow

./: Cargo.toml  justfile
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/ray_tracer/: Cargo.toml
crates/ray_tracer/src/: camera.rs  color.rs  hittable.rs  interval.rs  lib.rs  perlin.rs  ray.rs  scene_loader.rs  vec.rs
crates/ray_tracer/src/hittable/: quad.rs
scenes/: 2_ball_scene.json  3_ball_scene.json  book_1_cover.json  book_1_cover_scene.json  checkered_spheres.json  cover.json  earth.json  perlin_spheres.json  quads.json
src/: aabb.rs  bvh.rs  camera.rs  color.rs  hittable.rs  image.rs  interval.rs  lib.rs  main.rs  material.rs  ray.rs  scene_loader.rs  sphere.rs  texture.rs  vec.rs
