[package]
name = "rtiow"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.100"
argh = { version = "0.1.13", default-features = false, features = ["help"] }
indicatif = { version = "0.18.0", features = ["rayon"] }
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
